<resources>
    <string name="app_name">WhereAreYou</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="entry">entry</string>
    <string name="where_are_you">Where are you.</string>
    <string name="lifestyle">执子之手，风雨同行</string>
    <string name="search">search</string>
    <string name="changeTheme">changeTheme</string>
    <string name="delete">delete</string>
    <string name="change_theme">change theme</string>
    <string name="save">save</string>
    <string name="news_save">\t\t保存图片</string>
    <string name="login_number_hiti">请输入您的账号</string>
    <string name="login_password_hiti">请输入您的密码</string>
    <string name="login_button_text">登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_register">注册新用户</string>

    <!-- Register 页相关 Strings -->
    <string name="prompt_email">电子邮件</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_username">用户昵称</string>
    <string name="action_sign_in">注册账户</string>
    <string name="error_invalid_email">邮件地址不合法</string>
    <string name="error_invalid_password">密码过短，请至少大于四个字符</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项必填</string>
    <string name="error_register_failed">注册失败</string>
    <string name="btn_dialog_single_loc_name">单次共享</string>
    <string name="btn_dialog_real_time_loc_name">实时共享</string>

    <!-- AboutMe 页面相关 Strings -->
    <string name="project_introduction">\t\t\t\t
        WhereAreYou采用Google 官方推出的Material Design 设计风格，启动界面采用渐入式动画，随机显示引导图片。
        使用侧滑栏展示主要功能：主页地图功能，查询历史轨迹功能，更换主题功能，关于作者功能，并且支持用户的注册以及登录。
        其中主页地图功能，使用百度LBS地图将用户实时显示在地图之上，然后用户可以通过点击共享位置按钮，选择共享位置的方式，
        一种是单次共享位置，一种是实时轨迹共享。
    </string>

    <string name="project_thanks">\t\t\t\t 项目参考了bxbxbai的知乎专栏开源项目 <a href="https://github.com/bxbxbai/ZhuanLan">ZhuanLan</a> ，并使用了百度地图SDK，
        感谢一直在为开源做贡献的你们。
    </string>

    <string name="my_blog">\t\t\t\t GitHub 地址 <a href="https://github.com/waiting123">https://github.com/waiting123</a> 自己还要更加努力才行！</string>
    <string name="my_gmail">\t\t\t\t 我的邮箱: smilelingyong@gmail.com</string>
</resources>
