<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_enter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/entry"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/splash2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ban_shadow"
        android:fitsSystemWindows="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:text="@string/where_are_you"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/waiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:text="@string/lifestyle"
        android:textColor="@android:color/white" />


</RelativeLayout>